@@ -13,6 +13,11 @@ Changes in @NEW@:
       cause conary to try to reinstall the original foo (resulting in path
       conflicts). (CNY-915)
 
+  o Build (cvc) Changes:
+    * The Requires() policy now reads pkg-config files and converts the
+      "Requires:" lines in them into trove dependencies, removing the
+      need to specify those dependencies manually. (CNY-896)
+
   o Bug Fixes:
     * Conary now runs tagscripts correctly when passed a relative root 
       parameter (CNY-416).
